# neo-adx-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.demo.yaml  config.test.yaml  docker-compose.yaml  project.prd  pyproject.toml
configs/: config.compose.yaml
docs/: architecture.md  configuration.md  local-development.md
src/neo_collector_adx/: __init__.py  adx_client.py  app.py  cli.py  config.py  dotenv.py  exceptions.py  graph_fields.py  logging_utils.py  models.py  neo4j_client.py  scheduler.py  templating.py
tests/: test_config.py  test_templating.py
